--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="topnav">
         <header class="header">
             <a href="login.html">
-            <img class="nav-img" src="logo.png">
+            <img class="nav-img" src="img/logo.png">
             </a>
                 <nav class="navbar">
                     <ul class="nav-links">
