--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
  <!-- Navigation Bar -->
     <div class="topnav">
         <header class="header">
-            <img class="nav-img" src="logo.png">
+            <img class="nav-img" src="img/logo.png">
                 <nav class="navbar">
                     <ul class="nav-links">
                         <li> <a href="index.html"> Home </a></li>
