--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <!-- Background -->
     <canvas style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
-    <script type="text/javascript" src="/js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 <!-- End -->
 
 <!--3D box-->
