--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
     <div class="main-box">
         <div class="wrapper">
             <div class="page">
-                <img src="/img/img1.jpg" width="300px" height="300px" alt="">
+                <img src="img/img1.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="/img/img2.jpg" width="300px" height="300px" alt="">
+                <img src="img/img2.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="/img/img3.jpg" width="300px" height="300px" alt="">
+                <img src="img/img3.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="/img/img4.jpg" width="300px" height="300px" alt="">
+                <img src="img/img4.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="/img/img5.jpg" width="300px" height="300px" alt="">
+                <img src="img/img5.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="/img/img6.jpg" width="300px" height="300px" alt="">
+                <img src="img/img6.jpg" width="300px" height="300px" alt="">
             </div>
         </div>
     </div>
@@ -85,17 +85,17 @@
             <div class="slider">
                 <button class="slide-button material-symbols-outlined" id="prev-slide">chevron_left</button>
                 <div class="image">
-                    <img src="/img/storage.png" class="item" id="">
-                    <img src="/img/gpu.png" class="item" id="">
-                    <img src="/img/monitor.png" class="item" id="">
-                    <img src="/img/motherboard.png" class="item" id="">
-                    <img src="/img/mouse.png" class="item" id="">
-                    <img src="/img/headset.png" class="item" id="">
-                    <img src="/img/keyboard.png" class="item" id="">
-                    <img src="/img/cooling.png" class="item" id="">
-                    <img src="/img/psu.png" class="item" id="">
-                    <img src="/img/ram.png" class="item" id="">
-                    <img src="/img/desktop.png" class="item" id="">
+                    <img src="img/storage.png" class="item" id="">
+                    <img src="img/gpu.png" class="item" id="">
+                    <img src="img/monitor.png" class="item" id="">
+                    <img src="img/motherboard.png" class="item" id="">
+                    <img src="img/mouse.png" class="item" id="">
+                    <img src="img/headset.png" class="item" id="">
+                    <img src="img/keyboard.png" class="item" id="">
+                    <img src="img/cooling.png" class="item" id="">
+                    <img src="img/psu.png" class="item" id="">
+                    <img src="img/ram.png" class="item" id="">
+                    <img src="img/desktop.png" class="item" id="">
                 </div>
                 <button class="slide-button material-symbols-outlined" id="next-slide">chevron_right</button>
             </div>
