--- a/store.html
+++ b/store.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Store | OneTech </title>
         <!--Link to Css-->
-        <link rel="stylesheet" href="/css/store.css">
+        <link rel="stylesheet" href="store.css">
         <!--Box Icons-->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -15,7 +15,7 @@
     <!-- Navigation Bar -->
         <div class="topnav">
             <header class="header">
-                <img class="nav-img" src="/img/logo.png">
+                <img class="nav-img" src="img/logo.png">
                     <nav class="navbar">
                         <ul class="nav-links">
                             <li> <a href="index.html"> Home </a></li>
@@ -57,127 +57,127 @@
         <div class="shop-content">
         <!-- Motherboard -->
             <div class="product-box">
-                <img src="/img/motherboard/aorus mobo.png" alt="aorus mobo" class="product-img">
+                <img src="img/motherboard/aorus mobo.png" alt="aorus mobo" class="product-img">
                 <h2 class="product-title"> GIGABYTE X570 AORUS ELITE AMD X570 </h2>
                 <span class="price"> ₱10400 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/motherboard/rog mobo.png" alt="rog mobo" class="product-img">
+                    <img src="img/motherboard/rog mobo.png" alt="rog mobo" class="product-img">
                     <h2 class="product-title"> ASUS ROG STRIX B660-G GAMING WIFI Motherboard </h2>
                     <span class="price"> ₱12000 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/motherboard/msi mobo.png" alt="msi mobo" class="product-img">
+                        <img src="img/motherboard/msi mobo.png" alt="msi mobo" class="product-img">
                         <h2 class="product-title"> MSI MPG Z7 90 CARBON </h2>
                         <span class="price"> ₱30750 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- Storage -->
             <div class="product-box">
-                <img src="/img/storage/aorus ssd.png" alt="aorus ssd" class="product-img">
+                <img src="img/storage/aorus ssd.png" alt="aorus ssd" class="product-img">
                 <h2 class="product-title"> Aorus Gen4 SSD M.2 2280 NVMe - 1TB </h2>
                 <span class="price"> ₱7195 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/storage/corsair ssd.png" alt="corsair ssd" class="product-img">
+                    <img src="img/storage/corsair ssd.png" alt="corsair ssd" class="product-img">
                     <h2 class="product-title"> Corsair Force Series MP510 960GB NVMe PCIe Gen3 x4 M.2 SSD </h2>
                     <span class="price"> ₱9000 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/storage/msi ssd.png" alt="msi ssd" class="product-img">
+                        <img src="img/storage/msi ssd.png" alt="msi ssd" class="product-img">
                         <h2 class="product-title"> MSI SPATIUM M390 NVMe M.2 500GB SSD </h2>
                         <span class="price"> ₱2750 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- Monitor -->
             <div class="product-box">
-                <img src="/img/monitor/rog monitor.png" alt="rog monitor" class="product-img">
+                <img src="img/monitor/rog monitor.png" alt="rog monitor" class="product-img">
                 <h2 class="product-title"> ASUS ROG Swift PG279QM 2K HDR, 27″ 240Hz Gaming Monitor </h2>
                 <span class="price"> ₱53850 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/monitor/asus tuf monitor.png" alt="tuf monitor" class="product-img">
+                    <img src="img/monitor/asus tuf monitor.png" alt="tuf monitor" class="product-img">
                     <h2 class="product-title"> Asus TUF VG30VQL1A 29.5" Curved Gaming Monitor [200Hz] </h2>
                     <span class="price"> ₱19995 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/monitor/msi monitor.png" alt="msi monitor" class="product-img">
+                        <img src="img/monitor/msi monitor.png" alt="msi monitor" class="product-img">
                         <h2 class="product-title"> MSI Optix G24C4 23.6" Curved Gaming Monitor [144Hz] </h2>
                         <span class="price"> ₱11595 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- GPU -->
             <div class="product-box">
-                <img src="/img/GPU/rog gpu.png" alt="rog gpu" class="product-img">
+                <img src="img/GPU/rog gpu.png" alt="rog gpu" class="product-img">
                 <h2 class="product-title"> ROG STRIX RTX3060 12G V2 GAMING </h2>
                 <span class="price"> ₱29500 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/GPU/gigabyte aorus gpu.png" alt="gigabyte gpu" class="product-img">
+                    <img src="img/GPU/gigabyte aorus gpu.png" alt="gigabyte gpu" class="product-img">
                     <h2 class="product-title"> Gigabyte NVIDIA® GeForce RTX™ 4060 Gaming OC 8GB GDDR6 </h2>
                     <span class="price"> ₱21595 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/GPU/msi gpu.png" alt="msi gpu" class="product-img">
+                        <img src="img/GPU/msi gpu.png" alt="msi gpu" class="product-img">
                         <h2 class="product-title"> MSI GeForce RTX™ 3060 VENTUS 2X 12G OC 12GB GDDR6 </h2>
                         <span class="price"> ₱19450 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- Keyboard -->
             <div class="product-box">
-                <img src="/img/keyboard/rog keyboard.png" alt="rog keyboard" class="product-img">
+                <img src="img/keyboard/rog keyboard.png" alt="rog keyboard" class="product-img">
                 <h2 class="product-title"> Asus ROG Strix Scope RX Optical Mechanical Gaming Keyboard </h2>
                 <span class="price"> ₱5499 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/keyboard/asus tuf keyboard.png" alt="tuf keyboard" class="product-img">
+                    <img src="img/keyboard/asus tuf keyboard.png" alt="tuf keyboard" class="product-img">
                     <h2 class="product-title"> Asus TUF K3 RGB Mechanical Gaming Keyboard [Blue] </h2>
                     <span class="price"> ₱10999 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/keyboard/steelseries keyboard.png" alt="steelseries keyboard" class="product-img">
+                        <img src="img/keyboard/steelseries keyboard.png" alt="steelseries keyboard" class="product-img">
                         <h2 class="product-title"> SteelSeries Apex Pro Mechanical USB Gaming Keyboard </h2>
                         <span class="price"> ₱3450 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- Mouse -->
             <div class="product-box">
-                <img src="/img/mouse/rog mouse.png" alt="rog mouse" class="product-img">
+                <img src="img/mouse/rog mouse.png" alt="rog mouse" class="product-img">
                 <h2 class="product-title"> Asus ROG Chakram X Origin Wireless RGB Gaming Mouse </h2>
                 <span class="price"> ₱6895 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/mouse/corsair mouse.png" alt="corsair mouse" class="product-img">
+                    <img src="img/mouse/corsair mouse.png" alt="corsair mouse" class="product-img">
                     <h2 class="product-title"> Corsair Sabre RGB PRO Wireless Champion Series Ultra-Lightweight FPS </h2>
                     <span class="price"> ₱5050 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/mouse/logitech mouse.png" alt="logitech mouse" class="product-img">
+                        <img src="img/mouse/logitech mouse.png" alt="logitech mouse" class="product-img">
                         <h2 class="product-title"> Logitech G102 Lightsync RGB Gaming Mouse [Black]  </h2>
                         <span class="price"> ₱1075 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- Headset -->
             <div class="product-box">
-                <img src="/img/headset/rog headset.jpg" alt="rog headset" class="product-img">
+                <img src="img/headset/rog headset.jpg" alt="rog headset" class="product-img">
                 <h2 class="product-title"> Asus ROG Delta S Core Lightweight 3.5mm Gaming Headset </h2>
                 <span class="price"> ₱4495 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/headset/logitech headset.png" alt="logitech headset" class="product-img">
+                    <img src="img/headset/logitech headset.png" alt="logitech headset" class="product-img">
                     <h2 class="product-title"> Logitech G335 Wired Gaming Headset (Black) </h2>
                     <span class="price"> ₱3595 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
@@ -190,70 +190,70 @@
                     </div>
             <!-- Cooling -->
             <div class="product-box">
-                <img src="/img/cooling/aorus cooling.jpg" alt="aorus cooling" class="product-img">
+                <img src="img/cooling/aorus cooling.jpg" alt="aorus cooling" class="product-img">
                 <h2 class="product-title"> Gigabyte AORUS Waterforce 240 AIO CPU Liquid Cooler </h2>
                 <span class="price"> ₱8450 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/cooling/rog  cooling.png" alt="rog cooling" class="product-img">
+                    <img src="img/cooling/rog  cooling.png" alt="rog cooling" class="product-img">
                     <h2 class="product-title"> Asus ROG Strix LC II 280 ARGB Liquid CPU Cooler </h2>
                     <span class="price"> ₱9595 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/cooling/msi cooling.png" alt="msi cooling" class="product-img">
+                        <img src="img/cooling/msi cooling.png" alt="msi cooling" class="product-img">
                         <h2 class="product-title"> MSI MAG Core Liquid 240R RGB V2 CPU Cooler </h2>
                         <span class="price"> ₱4850 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- PSU -->
             <div class="product-box">
-                <img src="/img/PSU/corsair psu.png" alt="corsair psu" class="product-img">
+                <img src="img/PSU/corsair psu.png" alt="corsair psu" class="product-img">
                 <h2 class="product-title"> Asus ROG Thor 1200 P2-Gaming 1200W Platinum II Power Supply </h2>
                 <span class="price"> ₱22750 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/PSU/msi psu.png" alt="msi psu" class="product-img">
+                    <img src="img/PSU/msi psu.png" alt="msi psu" class="product-img">
                     <h2 class="product-title"> Corsair RM650 - 650 Watt 80 Plus Gold Fully Modular ATX PSU </h2>
                     <span class="price"> ₱6195 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/PSU/rog psu.png" alt="rog psu" class="product-img">
+                        <img src="img/PSU/rog psu.png" alt="rog psu" class="product-img">
                         <h2 class="product-title"> MSI MPG A750GF 750Watts 80+ Full Modular Power Supply Gold </h2>
                         <span class="price"> ₱6165 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
                     </div>
             <!-- RAM -->
             <div class="product-box">
-                <img src="/img/RAM/corsair ram.png" alt="corsair ram" class="product-img">
+                <img src="img/RAM/corsair ram.png" alt="corsair ram" class="product-img">
                 <h2 class="product-title"> Corsair Vengeance RGB 32GB (2x16GB) DDR5 DRAM 6000MHz C40 Memory Kit </h2>
                 <span class="price"> ₱7995 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/RAM/teamgroup ram.png" alt="teamgroup ram" class="product-img">
+                    <img src="img/RAM/teamgroup ram.png" alt="teamgroup ram" class="product-img">
                     <h2 class="product-title"> TEAMGROUP T-Force Delta RGB DDR4 16GB (2x8GB) 3200MHz CL16 Desktop Memory </h2>
                     <span class="price"> ₱2985 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
             <!-- Desktop -->
             <div class="product-box">
-                <img src="/img/dektop case/rog desktop.png" alt="rog desktop" class="product-img">
+                <img src="img/dektop case/rog desktop.png" alt="rog desktop" class="product-img">
                 <h2 class="product-title"> Asus ROG Strix Helios GX601RGB Mid Tower Gaming Case [Black] </h2>
                 <span class="price"> ₱16195 </span>
                 <i class='bx bx-shopping-bag add-cart'></i>
             </div>
                 <div class="product-box">
-                    <img src="/img/dektop case/msi desktop.png" alt="msi desktop" class="product-img">
+                    <img src="img/dektop case/msi desktop.png" alt="msi desktop" class="product-img">
                     <h2 class="product-title"> MSI MAG Forge 100R Mid Tower PC Case Black Support ATX / Micro ATX / Mini-ITX, Tempered Glass </h2>
                     <span class="price"> ₱3475 </span>
                     <i class='bx bx-shopping-bag add-cart'></i>
                 </div>
                     <div class="product-box">
-                        <img src="/img/dektop case/corsair desktop.png" alt="corsair desktop" class="product-img">
+                        <img src="img/dektop case/corsair desktop.png" alt="corsair desktop" class="product-img">
                         <h2 class="product-title"> Corsair 4000D Airflow Tempered Glass Mid-Tower ATX PC Case [Black] </h2>
                         <span class="price"> ₱5495 </span>
                         <i class='bx bx-shopping-bag add-cart'></i>
