--- a/about-us.html
+++ b/about-us.html
@@ -4,14 +4,14 @@
     <title>About Us | OneTech</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/aboutstyle.css">
+    <link rel="stylesheet" type="text/css" href="aboutstyle.css">
 </head>
 <body>
 
 <!-- Navigation Bar -->
     <div class="topnav">
         <header class="header">
-            <img class="nav-img" src="/img/logo.png">
+            <img class="nav-img" src="img/logo.png">
                 <nav class="navbar">
                     <ul class="nav-links">
                         <li> <a href="index.html"> Home </a></li>
@@ -49,7 +49,7 @@
             </div>
             
             <div class="image-section">
-                <img src="/img/about-background.jpg">
+                <img src="img/about-background.jpg">
             </div>
         </div>
     </div>
