--- a/ourteam.html
+++ b/ourteam.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/ourteam.css">
+    <link rel="stylesheet" href="ourteam.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Our Team | OneTech</title>
 </head>
@@ -46,7 +46,7 @@
         <div class="profile-box">
             <h4> CABUNGAN </h4>
             <small> Maria Kirsten </small>
-            <img src="/img/cabungan.jpg">
+            <img src="img/cabungan.jpg">
                 <div class="social-box">
                     <i class='bx bxl-facebook'></i>
                     <i class='bx bxl-youtube' ></i>
@@ -61,7 +61,7 @@
         <div class="profile-box">
             <h4> CUAJAO </h4>
             <small> Neil John </small>
-            <img src="/img/Cuajao.jpg">
+            <img src="img/Cuajao.jpg">
                 <div class="social-box">
                     <i class='bx bxl-facebook'></i>
                     <i class='bx bxl-youtube' ></i>
@@ -76,7 +76,7 @@
         <div class="profile-box">
             <h4> DE LEON </h4>
             <small> Jeremy James </small>
-            <img src="/img/Jeremy.jpg">
+            <img src="img/Jeremy.jpg">
                 <div class="social-box">
                     <i class='bx bxl-facebook'></i>
                     <i class='bx bxl-youtube' ></i>
@@ -91,7 +91,7 @@
         <div class="profile-box">
             <h4> EUGENIO </h4>
             <small> Rhazzie </small>
-            <img src="/img/Eugenio.jpg">
+            <img src="img/Eugenio.jpg">
                 <div class="social-box">
                     <i class='bx bxl-facebook'></i>
                     <i class='bx bxl-youtube' ></i>
@@ -106,7 +106,7 @@
         <div class="profile-box">
             <h4> PANTUA </h4>
             <small> Ryan </small>
-            <img src="/img/pantua.jpg">
+            <img src="img/pantua.jpg">
                 <div class="social-box">
                     <i class='bx bxl-facebook'></i>
                     <i class='bx bxl-youtube' ></i>
@@ -121,7 +121,7 @@
         <div class="profile-box">
             <h4> UMLAS </h4>
             <small> Ryan Christopher </small>
-            <img src="/img/Umlas.jpg">
+            <img src="img/Umlas.jpg">
                 <div class="social-box">
                     <i class='bx bxl-facebook'></i>
                     <i class='bx bxl-youtube' ></i>
