--- a/brands.html
+++ b/brands.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/brands.css">
+    <link rel="stylesheet" href="brands.css">
     <title>OT - One Tech</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 <!-- Navigation Bar -->
 <div class="topnav">
     <header class="header">
-        <img class="nav-img" src="/img/logo.png">
+        <img class="nav-img" src="img/logo.png">
             <nav class="navbar">
                 <ul class="nav-links">
                     <li> <a href="index.html"> Home </a></li>
@@ -44,56 +44,56 @@
     <div class="logo">
         <div class="image">
             <div class="photo">
-            <img src="/img/brands/rog.png" height="250px">
+            <img src="img/brands/rog.png" height="250px">
             </div>
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/asus.png" height="250px">
+            <img src="img/brands/asus.png" height="250px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/msi.png" height="250px">
+            <img src="img/brands/msi.png" height="250px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/corsair logo.png" height="250px">
+            <img src="img/brands/corsair logo.png" height="250px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/logitech logo.png" height="550px">
+            <img src="img/brands/logitech logo.png" height="550px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/razer logo.png" height="250px">
+            <img src="img/brands/razer logo.png" height="250px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/aorus logo.png" height="250px">
+            <img src="img/brands/aorus logo.png" height="250px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/gigabyte logo.png" height="250px">
+            <img src="img/brands/gigabyte logo.png" height="250px">
         </div>
     </div>
 
     <div class="image">
         <div class="photo">
-            <img src="/img/brands/steelseries logo.png" height="250px">
+            <img src="img/brands/steelseries logo.png" height="250px">
         </div>
     </div>
 
