--- a/registrar.html
+++ b/registrar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Register | OneTech</title>
-    <link rel="stylesheet" href="/css/registrar.css">
+    <link rel="stylesheet" href="registrar.css">
 </head>
 <body>
 
