--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="/css/login.css">
+    <link rel="stylesheet"  href="login.css">
     <title> Log In | OneTech</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="topnav">
         <header class="header">
             <a href="login.html">
-            <img class="nav-img" src="/img/logo.png">
+            <img class="nav-img" src="img/logo.png">
             </a>
                 <nav class="navbar">
                     <ul class="nav-links">
@@ -41,9 +41,9 @@
                 <h1>Login To Your Account</h1>
                 <h3>Login using this social media</h3>
                 <div class="form-icons">
-                    <a href="#"><img src="/img/facebook.png" alt="fb" ></a>
-                    <a href="#"><img src= "/img/instagram.png" alt="ig"></a>
-                    <a href="#"><img src="/img/twitter.png" alt="twt"></a>
+                    <a href="#"><img src="img/facebook.png" alt="fb" ></a>
+                    <a href="#"><img src= "img/instagram.png" alt="ig"></a>
+                    <a href="#"><img src="img/twitter.png" alt="twt"></a>
                 </div>
 
                 <form method="#" action="home.html">
