--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="signup-link">
-                        <input type="submit" value="login">
+                        <input type="submit" value="login"> <a href="home.html">
                     </div>
 
                     <div class="signup-link">
