--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 <title> Home | OneTech</title>
 <!-- Link to CSS -->
-    <link rel="stylesheet"  href="home.css">
+    <link rel=stylesheet  href="home.css">
 </head>
 <body>
 
