--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 <title> Home | OneTech</title>
 <!-- Link to CSS -->
-    <link rel=stylesheet  href="home.css">
+    <link rel = stylesheet href ="home.css">
 </head>
 <body>
 
@@ -18,11 +18,11 @@
     <div class="topnav">
         <header class="header">
             <a href="login.html">
-            <img class="nav-img" src="img/logo.png">
+            <img class="nav-img" src="/img/logo.png">
             </a>
                 <nav class="navbar">
                     <ul class="nav-links">
-                        <li> <a href="home.html"> Home </a></li>
+                        <li> <a href="index.html"> Home </a></li>
                         <li> <a href="store.html"> Store </a></li>
                         <li> <a href="about-us.html"> About Us </a></li>
                         <li> <a href="contact.html"> Contact Us </a></li>
@@ -45,34 +45,34 @@
 
 <!-- Background -->
     <canvas style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="/js/script.js"></script>
 <!-- End -->
 
 <!--3D box-->
     <div class="main-box">
         <div class="wrapper">
             <div class="page">
-                <img src="img/img1.jpg" width="300px" height="300px" alt="">
+                <img src="/img/img1.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="img/img2.jpg" width="300px" height="300px" alt="">
+                <img src="/img/img2.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="img/img3.jpg" width="300px" height="300px" alt="">
+                <img src="/img/img3.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="img/img4.jpg" width="300px" height="300px" alt="">
+                <img src="/img/img4.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="img/img5.jpg" width="300px" height="300px" alt="">
+                <img src="/img/img5.jpg" width="300px" height="300px" alt="">
             </div>
 
             <div class="page">
-                <img src="img/img6.jpg" width="300px" height="300px" alt="">
+                <img src="/img/img6.jpg" width="300px" height="300px" alt="">
             </div>
         </div>
     </div>
@@ -85,17 +85,17 @@
             <div class="slider">
                 <button class="slide-button material-symbols-outlined" id="prev-slide">chevron_left</button>
                 <div class="image">
-                    <img src="img/storage.png" class="item" id="">
-                    <img src="img/gpu.png" class="item" id="">
-                    <img src="img/monitor.png" class="item" id="">
-                    <img src="img/motherboard.png" class="item" id="">
-                    <img src="img/mouse.png" class="item" id="">
-                    <img src="img/headset.png" class="item" id="">
-                    <img src="img/keyboard.png" class="item" id="">
-                    <img src="img/cooling.png" class="item" id="">
-                    <img src="img/psu.png" class="item" id="">
-                    <img src="img/ram.png" class="item" id="">
-                    <img src="img/desktop.png" class="item" id="">
+                    <img src="/img/storage.png" class="item" id="">
+                    <img src="/img/gpu.png" class="item" id="">
+                    <img src="/img/monitor.png" class="item" id="">
+                    <img src="/img/motherboard.png" class="item" id="">
+                    <img src="/img/mouse.png" class="item" id="">
+                    <img src="/img/headset.png" class="item" id="">
+                    <img src="/img/keyboard.png" class="item" id="">
+                    <img src="/img/cooling.png" class="item" id="">
+                    <img src="/img/psu.png" class="item" id="">
+                    <img src="/img/ram.png" class="item" id="">
+                    <img src="/img/desktop.png" class="item" id="">
                 </div>
                 <button class="slide-button material-symbols-outlined" id="next-slide">chevron_right</button>
             </div>
@@ -137,5 +137,12 @@
 
     </div>
 
+<!-- Footer -->
+    <footer class="page-footer">
+        <p>Copyright &copy; <span id="date"></span>
+        <span class="footer-logo">Nov 2023 | Developed by: Cabungan, Cuajao, De Leon Jeremy, Eugenio, Pantua, Umlas</span>
+    </p>
+    </footer>
+<!-- End -->
     </body>
     </html>
